--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <h1>Hello!</h1>
     <p>Hello, my name is Ryme Bakar (you can call me Ry) and welcome to my page.
-    <br> Below is the webpage navigation <span><a href="#menu_anchor">menu</a></span> where you can visit different sections of the page.</p>
+    <br> Below is the webpage navigation <span class="a"><a href="#menu_anchor">menu</a></span> where you can visit different sections of the page.</p>
 
     <br>
     <hr>
